--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -81,12 +81,33 @@ section h3 {
 }
 
 .participants-list {
-  list-style-type: disc;
-  margin: 0.5rem 0 0 1.2rem;
+  list-style-type: none;
+  margin: 0.5rem 0 0 0;
   padding: 0;
   color: #333;
   font-size: 0.97rem;
 }
+
+.participant-email {
+  margin-right: 0.5em;
+}
+
+.delete-participant {
+  background: none;
+  border: none;
+  color: #c62828;
+  font-size: 1.1em;
+  cursor: pointer;
+  margin-left: 0.2em;
+  padding: 0 0.3em;
+  border-radius: 3px;
+  transition: background 0.15s;
+}
+.delete-participant:hover {
+  background: #ffeaea;
+  color: #a00;
+}
+
 
 .participant-item {
   margin-bottom: 0.25rem;
